package com.panda.structor.adapter.objectadapter;

public class Adaptee {
    public void beforeAdapter(){
        System.out.println("被适配之前的方法执行");
    }
}
